[package]
name = "resader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.27.0", features = ["bundled"] }
chrono = "0.4.19"
uuid = { version = "0.4", features = ["serde", "v4"] }
md5 = "0.7.0"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.2"
lazy_static = "1.4.0"
futures-util = "0.3.21"
bson = "2.3.0"
rss = "2.0"
reqwest = "0.11.11"